ajout thematiques CEE-M

--- a/index.html
+++ b/index.html
@@ -278,13 +278,28 @@
                     <section style="text-align: left">
                         <p><strong>Etapes pour la mise en place d’un nudge</strong></p>
                         <ul class="with_little_space">
-                            <li><u>Ciblage</u> : détermier la population cible et fixer les objectifs.</li>
+                            <li><u>Ciblage</u> : déterminer la population cible, analyser le terrain et fixer les objectifs.</li>
                             <li><u>Idéation</u> : processus créatif permettant de révéler, former et expliciter des idées. Sélection des meilleures idées, efficaces et peu coûteuses. </li>
-                            <li><u>Développement limité</u> : ne pas déployer le nudge à grande échelle sans être certain des répercussions et de l’impact.</li>
-                            <li><u>Tests et mesures</u> : s’assurer que les personnes touchées font évoluer leur comportement à court terme, mais également à plus long terme, une fois l’effet de surprise passé.</li>
-                            <li><u>Adaptation</u> : si besoin, adpater le nudge suite aux tests et mesures</li>
-                            <li><u>Mise en place à grande échelle</u> : une fois les tests concluants, le nudge peut être déployé à grande échelle.</li>
+                            <li><u>Test</u> : pour chacun des dispositifs, une phase de test impliquant les acteurs de terrain afin de s’assurer que les personnes touchées font évoluer leur comportement à court terme, mais également à plus long terme, une fois l’effet de surprise passé.</li>
+                            <li><u>Adaptation / Sélection</u> : adapter si besoin le nudge suite aux tests et mesures, sélectionner les dispositifs les plus efficaces</li>
+                            <li><u>Mise en place à grande échelle</u> : expérimentation du dispositif retenu, sur plusieurs terrains, et mise en œuvre généralisée .</li>
                         </ul>
+                    </section>
+                    <section style="text-align: left">
+                        <p><strong>Thématiques de recherche du Centre d'Economie de l'Environment de Montpellier (CEE-M)</strong></p>
+                        <div style="width: 75%; float: left">
+                            <ul>
+                                <li>biodiversité</li>
+                                <li>gestion des ressources renouvelables</li>
+                                <li>tri des déchets / recyclage</li>
+                                <li>politique agricole / pesticides</li>
+                                <li>finance verte</li>
+                                <li>prise en compte / gestion des risques environnementaux</li>
+                            </ul>
+                        </div>
+                        <div style="width: 25%; float: left">
+                            <img src="img/ceem.png" alt="CEE-M" class="plain">
+                        </div>
                     </section>
                 </section>
 
