ajout image recommandations

--- a/index.html
+++ b/index.html
@@ -331,6 +331,9 @@
                 <section id="nudges_lecons">
                     <section>
                         <h2>Recommandations pour la mise en place des nudges</h2>
+                        <figure style="text-align: center">
+                            <img src="img/recommandation.jpg" alt="Recommandations" class="plain" style="width: 30%">
+                        </figure>
                     </section>
                     <section class="left">
                         <ul class="with_little_space" style="font-size: 0.75em">
