--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                     </section>
                     <section class="left">
                         <h4>Autres résultats de la littérature</h4>
-                        <ul>
+                        <ul class="with_space">
                             <li>Les normes descriptives (ce qui est fait) et injonctives (ce qu'il faudrait faire) sont complémentaires (Bonan, Cattaneo, d’Adda & Tavoni, <em>Nature Energy</em> 2020)</li>
                             <li>L'efficacité des nudges peut être renforcée lorsqu'ils sont combinés avec des interventions qui favorisent l'adoption de technologies économes en énergie (Brandon et al., <em>National Bureau of Economic Research</em> 2022)</li>
                         </ul>
@@ -368,10 +368,13 @@
                     <section>
                         <h2>Références</h2>
                     </section>
-                    <section>
-                        <ul>
+                    <section class="left">
+                        <ul style="font-size: 0.75em" class="with_little_space">
+                            <li>Bonan, J., Cattaneo, C., d'Adda, G., Tavoni, M., (2020), Combining information on others’ energy usage and their approval of energy conservation promotes energy saving behaviour, Nature Energy 5.</li>
+                            <li>Brandon A., Ferraro, P.J., List, J.A., Metcalfe, R.D., Price, M.K. & Rundhammer, F. (2022), Do The Effects of Nudges Persist? Theory and Evidence from 38 Natural Field Experiments NBER Working Paper No. 23277</li>
                             <li>Harrison, G. W. & List, J.A. (2004); Field Experiments. Journal of Economic Literature 42, 1009–1055.</li>
                             <li>Kahneman, D. (2011). Thinking, fast and slow. London: Penguin Books.</li>
+                            <li>Kahneman, D. & Tversky, A. (1982), Judgment under uncertainty : Heuristics and biasis, New york, Cambdridge University Press.</li>
                             <li>Thaler, R. H., & Sunstein, C. R. (2008). Nudge: improving decisions about health. Wealth, and Happiness, Yale University Press.</li>
                             <li>Wee, S.C., Choong, W.W. & Low, S.T. (2021), Can Nudging play a role to promote pro-environnemental behaviour ?, Environmental Challenges 5.</li>
                         </ul>
