--- a/index.html
+++ b/index.html
@@ -312,18 +312,19 @@
                     <section class="left">
                         <h4>Autres résultats de la littérature</h4>
                         <ul class="with_space">
-                            <li>Les normes descriptives (ce qui est fait) et injonctives (ce qu'il faudrait faire) sont complémentaires (Bonan, Cattaneo, d’Adda & Tavoni, <em>Nature Energy</em> 2020)</li>
-                            <li>L'efficacité des nudges peut être renforcée lorsqu'ils sont combinés avec des interventions qui favorisent l'adoption de technologies économes en énergie (Brandon et al., <em>National Bureau of Economic Research</em> 2022)</li>
+                            <li>Les croyances normatives de second ordre (i.e. les croyances d'un individu sur ce que les autres pensent qu'il devrait faire) ont un impact plus important sur le comportement pro-environnemental que les croyances personnelles (Jachimowicz et al., <em>Nature Human Behaviour</em> 2018).</li>
+                            <li>Les normes descriptives (ce qui est fait) et injonctives (ce qu'il faudrait faire) sont complémentaires (Bonan, Cattaneo, d’Adda & Tavoni, <em>Nature Energy</em> 2020).</li>
+                            <li>L'efficacité des nudges peut être renforcée lorsqu'ils sont combinés avec des interventions qui favorisent l'adoption de technologies économes en énergie (Brandon et al., <em>National Bureau of Economic Research</em> 2022).</li>
                         </ul>
                     </section>
                     <section class="left">
                         <h3>Limites</h3>
                         <ul class="with_little_space" style="font-size: 0.75em">
-                            <li><strong>Effets rebonds</strong> : Les individus peuvent compenser les comportements écologiques encouragés par les nudges par d'autres comportements moins écologiques.</li>
-                            <li><strong>Sensibilité aux caractéristiques individuelles</strong> : L'efficacité des nudges peut varier en fonction des caractéristiques individuelles, comme les attitudes environnementales ou le niveau d'éducation.</li>
+                            <li><strong>Effet rebond</strong> : Les individus peuvent compenser les comportements écologiques encouragés par les nudges par d'autres comportements moins écologiques.</li>
+                            <li><strong>Sensibilité aux caractéristiques individuelles</strong> : L'efficacité des nudges peut varier en fonction des caractéristiques individuelles, comme les attitudes environnementales, le niveau d'éducation, la préférence politique etc.</li>
                             <li><strong>Acceptabilité sociale</strong> : Certaines personnes peuvent voir les nudges comme une forme de manipulation ou de contrôle, ce qui peut susciter des réactions négatives.</li>
                             <li><strong>Effets potentiellement limités dans le temps</strong> : Les effets des nudges peuvent s'estomper avec le temps si les individus s'habituent à la nouvelle norme ou au nouvel environnement de choix.</li>
-                            <li><strong>Mais aussi</strong> : difficultés de transposition à grande échelle, dépendance au contexte institutionnel, résistance au changement etc.</li>
+                            <li><strong>Mais aussi</strong> : résistance au changement, difficultés de transposition à grande échelle, dépendance au contexte institutionnel, etc.</li>
                         </ul>
                     </section>
                 </section>
@@ -336,17 +337,17 @@
                         </figure>
                     </section>
                     <section class="left">
-                        <ul class="with_little_space" style="font-size: 0.75em">
+                        <ul class="with_little_space" style="font-size: 0.8em">
                             <li><strong>Ciblage</strong> : déterminer la population cible, analyser le terrain et fixer les objectifs.</li>
                             <li><strong>Idéation</strong> : processus créatif permettant de révéler, former et expliciter des idées. Sélection des meilleures idées, efficaces et peu coûteuses. </li>
                             <li><strong>Test</strong> : pour chacun des dispositifs, une phase de test impliquant les acteurs de terrain afin de s’assurer que les personnes touchées font évoluer leur comportement à court terme, mais également à plus long terme, une fois l’effet de surprise passé.</li>
                             <li><strong>Adaptation / Sélection</strong> : adapter si besoin le nudge suite aux tests et mesures, sélectionner les dispositifs les plus efficaces</li>
                             <li><strong>Mise en place à grande échelle</strong> : expérimentation du dispositif retenu sur plusieurs terrains et mise en œuvre généralisée .</li>
                         </ul>
-                        <p>Il est recommandé d'utiliser plusieurs techniques de nudging en même temps pour augmenter leur efficacité.</p>
+                        <p><em>Il est recommandé d'utiliser plusieurs techniques de nudging en même temps pour augmenter leur efficacité.</em></p>
                     </section>
                     <section class="left">
-                        <p><strong>Thématiques de recherche du Centre d'Economie de l'Environnement de Montpellier (CEE-M)</strong></p>
+                        <p><strong>Domaines concernés</strong></p>
                         <div style="width: 75%; float: left">
                             <ul>
                                 <li>biodiversité</li>
@@ -356,10 +357,11 @@
                                 <li>finance verte</li>
                                 <li>prise en compte / gestion des risques environnementaux</li>
                                 <li>transport</li>
+                                <li>etc.</li>
                             </ul>
                         </div>
                         <div style="width: 25%; float: left">
-                            <img src="img/ceem.png" alt="CEE-M" class="plain">
+                            <img src="img/biodiversite.jpg" alt="Terre verte" class="plain" style="border-radius: 5px">
                         </div>
                     </section>
                 </section>
@@ -372,7 +374,9 @@
                         <ul style="font-size: 0.75em" class="with_little_space">
                             <li>Bonan, J., Cattaneo, C., d'Adda, G., Tavoni, M., (2020), Combining information on others’ energy usage and their approval of energy conservation promotes energy saving behaviour, Nature Energy 5.</li>
                             <li>Brandon A., Ferraro, P.J., List, J.A., Metcalfe, R.D., Price, M.K. & Rundhammer, F. (2022), Do The Effects of Nudges Persist? Theory and Evidence from 38 Natural Field Experiments NBER Working Paper No. 23277</li>
+                            <li>Enste, D. & Potthoff, J. (2023) : Behavioral economics in companies: Nudging green behavior. Evidence of the effectiveness of green nudges in companies, IW-Report, No. 26/2023, Institut der deutschen Wirtschaft (IW), Köln</li>
                             <li>Harrison, G. W. & List, J.A. (2004); Field Experiments. Journal of Economic Literature 42, 1009–1055.</li>
+                            <li>Jachimowicz, J.M., Hauser, O.P., O'Brien, J.D., Sherman, E. & Galinsky, A.D. (2018), The critical role of second-order normative beliefs in predicting energy conservation. Nature Human Behaviour 2 (10).</li>
                             <li>Kahneman, D. (2011). Thinking, fast and slow. London: Penguin Books.</li>
                             <li>Kahneman, D. & Tversky, A. (1982), Judgment under uncertainty : Heuristics and biasis, New york, Cambdridge University Press.</li>
                             <li>Thaler, R. H., & Sunstein, C. R. (2008). Nudge: improving decisions about health. Wealth, and Happiness, Yale University Press.</li>
@@ -403,6 +407,36 @@
                             <li><u>La "présentation"</u> : présenter les options de manière à influencer le choix de l'individu. Par exemple, présenter les options de manière à ce que l'option pro-environnementale semble être le meilleur choix.</li>
                             <li><u>Le "labelling"</u> : mettre en évidence des informations spécifiques sur un produit ou une option. Par exemple, étiqueter les caractéristiques d'économie d'énergie sur les appareils électriques, ou indiquer la quantité d'émissions de gaz à effet de serre produites lors de la fabrication d'un aliment.</li>
                             <li><u>Le "design fonctionnel"</u> : modifier le design fonctionnel de l'objet ou de l'environnement. Par exemple, changer la forme du papier toilette en carrés pour éviter la surconsommation.</li>
+                        </ul>
+                    </section>
+                    <section class="left">
+                        <p>
+                            <strong>Les nudges en entreprise</strong>, Enste & Potthoff<br>
+                            <span style="font-size:0.75em; font-style: italic">German Economic Institute, 2023</span>
+                        </p>
+                        <p style="font-style: oblique; font-weight: bold">Pour promouvoir l'efficacité énergétique en entreprise</p>
+                        <ul class="with_space">
+                            <li>Modifier les paramètres par défaut des thermostats dans les bâtiments de bureau pour réduire la consommation d'énergie par le chauffage.</li>
+                            <li>Modifier le paramètre par défaut des ascenseurs en fonctionnement et éteindre ceux qui ne sont pas nécessaires.</li>
+                            <li>Donner aux employés un retour d'information sur leur consommation d'électricité par courrier pour les sensibiliser et les motiver à économiser de l'électricité.</li>
+                            <li>Introduire des compétitions d'économie d'énergie en équipe pour réduire la consommation d'énergie de l'entreprise.</li>
+                        </ul>
+                    </section>
+                    <section class="left">
+                        <p  style="font-style: oblique; font-weight: bold">Pour promouvoir des choix de transport durables</p>
+                        <ul>
+                            <li>Mettre en place une plateforme pour promouvoir le covoiturage entre collègues afin de réduire l'utilisation de la voiture individuelle pour se rendre au travail.</li>
+                            <li>Fournir aux employés une application qui donne un retour d'information sur l'efficacité énergétique pour réduire les émissions de CO² liées aux déplacements professionnels.</li>
+                            <li>Introduire des compétitions de vélo en équipe contre différentes entreprises ou entre différents départements de votre entreprise pour motiver les employés à se rendre au travail à vélo.</li>
+                        </ul>
+                    </section>
+                    <section class="left">
+                        <p  style="font-style: oblique; font-weight: bold">Pour promouvoir une utilisation économique des ressources</p>
+                        <ul>
+                            <li>Modifier le paramètre par défaut sur les ordinateurs portables de vos employés de l'impression recto à l'impression recto-verso pour réduire la consommation de papier.</li>
+                            <li>Ajouter le rappel "Pensez avant d'imprimer" dans les courriels d'entreprise.</li>
+                            <li>Diminuer la taille des assiettes dans la cantine de l'entreprise pour réduire le gaspillage alimentaire.</li>
+                            <li>Placer un panneau avec les lignes "De plus en plus de vos collègues passent des gobelets à emporter à une alternative durable" à côté de la machine à café pour diminuer le nombre de gobelets jetables dans votre café ou cantine d'entreprise.</li>
                         </ul>
                     </section>
                 </section>
