--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <li><a href="#sciences_comportementales">Les sciences comportementales</a></li>
                             <li><a href="#nudges">Nudges : des coups de pouce pour le changement de comportement</a></li>
                             <li><a href="#nudges_environmentaux">Les nudges verts</a></li>
-                            <li><a href="#nudges_lecons">Recommandations pour la mise en place des nudges</a></li>
+                            <li><a href="#nudges_lecons">Recommandations pour la mise en place de nudges</a></li>
                         </ol>
                     </section>
                 </section>
@@ -190,7 +190,7 @@
                         </p>
                         <ul class="with_space">
                             <li>Intervention simple et peu coûteuse qui vise à orienter les choix des individus tout en leur laissant la liberté de choisir.</li>
-                            <li>Conçus pour exploiter les biais cognitifs et émotionnels des individus afin de les amner à prendre des décisions qui sont dans leur meilleur intérêt à long terme.</li>
+                            <li>Conçus pour exploiter les biais cognitifs et émotionnels des individus afin de les amener à prendre des décisions qui sont dans leur meilleur intérêt à long terme.</li>
                             <li>À la différence d’une sanction ou d’une interdiction, le nudge n’est pas coercitif, c'est du "paternalisme libertaire".</li>
                         </ul>
                     </section>
@@ -320,7 +320,7 @@
                     <section class="left">
                         <h3>Limites</h3>
                         <ul class="with_little_space" style="font-size: 0.75em">
-                            <li><strong>Effet rebond</strong> : Les individus peuvent compenser les comportements écologiques encouragés par les nudges par d'autres comportements moins écologiques.</li>
+                            <li><strong>Effet rebond</strong> : Les individus peuvent compenser une amélioration (énergie verte, voiture électrique) par une augmentation de la consommation.</li>
                             <li><strong>Sensibilité aux caractéristiques individuelles</strong> : L'efficacité des nudges peut varier en fonction des caractéristiques individuelles, comme les attitudes environnementales, le niveau d'éducation, la préférence politique etc.</li>
                             <li><strong>Acceptabilité sociale</strong> : Certaines personnes peuvent voir les nudges comme une forme de manipulation ou de contrôle, ce qui peut susciter des réactions négatives.</li>
                             <li><strong>Effets potentiellement limités dans le temps</strong> : Les effets des nudges peuvent s'estomper avec le temps si les individus s'habituent à la nouvelle norme ou au nouvel environnement de choix.</li>
